sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/VariableAssignment.sand
pub class VariableAssignment {
    assignmentType() {
        a = b;

        a **= b;
        a *= b;
        a /= b;
        a %= b;
        a += b;
        a -= b;
    }

    righthand() {
        a = b;
        a = if cond {
            foo();
            b
        } else {
            c
        };
    }
}