sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/IfStatementWithEmptyBody.sand
pub class IfStatementWithEmptyBody {
    foo() {
        (
            if cond {
                
            }
        )
    }
}